2002-12-03  Andras Varga

	* plotedit.tcl: bugfix: it was not possible to draw exactly horizontal 
	or vertical connection arrows

	* drawopts.tcl: bugfix: Tcl error when icon in loaded NED file was not 
	found

2002-11-28  Andras Varga

	* drawopts.tcl: icon selection dialog improved

2002-11-12 Andras Varga

	* ported to Tk8.4 (several 'char *' to 'const char *' changes)

2002-11-04  Andras Varga

	* ebnf.y: synchronized with nedc

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-06  Andras Varga

	* main.tcl: Fix for Cygwin: checkVersion complained about tk_patchLevel
        '8.0.4'. (In earlier versions, tk_patchLevel had the format '8.0p4').

        * *.tcl: puts "dbg: ..." statements replaced by a debug procedure, with
        debugging currently turned off.

2002-02-29  Andras Varga

	* findrepl.tcl: implemented backwards search/replace

2002-02-24  Andras Varga

	* gned.cc: bugfix: gned.exe with WinMain() didn't accept command-line
        file arguments that contained backslashes

2001-10-06  Andras Varga

	* findrepl.tcl: regexp replace improved (\1,\2 in replace string now work
        as expected)

2001-09-01 Andras Varga

	* CONST_CAST() replaced by const_cast<>()

2001-07-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* parsened.cc (error): use macro CONST_CAST (defined at top of
	file) to avoid compilation errors with gcc-2.95.3
	* ebnf.y (addGate): CONST_CAST again

2001-07-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.vc (ebnf.tab.cc) (lex.yy.cc): use "copy" and "del" instead of "mv"

	*  (Repository):
	removed files: ebnf.tab.c lex.yy.c
	new files: ebnf.tab.cc lex.yy.cc

	* Makefile.in
	targets renamed:
		ebnf.tab.c  ->  ebnf.tab.cc
		lex.yy.c    ->  lex.yy.cc
	(ebnf.tab.cc): mv ebnf.tab.c to ebnf.tab.cc
	(lex.yy.cc): mv lex.yy.c to lex.yy.cc
	(lex.yy.o): renamed lex.yy.c to lex.yy.cc
	(ebnf.tab.o): renamed ebnf.tab.c to ebnf.tab.cc


	* Makefile.vc
	targets renamed:
		ebnf.tab.c  ->  ebnf.tab.cc